# ecb-rates

./: Cargo.toml  LICENSE  README.md
.github/workflows/: package.yml
src/: cache.rs  cli.rs  header_description.rs  holiday.rs  lib.rs  main.rs  models.rs  os.rs  parsing.rs  table.rs  utils_calc.rs  view.rs
src/cache/: cache.rs  cache_line.rs
src/caching/: cache.rs  cache_line.rs  mod.rs
src/cli/: cli_t.rs  mod.rs  since.rs  sort_by.rs
src/models/: currency.rs  exchange_rate_result.rs  mod.rs
src/table/: mod.rs  table_display.rs  table_getter.rs  table_owned.rs  table_ref.rs  table_trait.rs
