[package]
name = "ecb-rates"
description = "Query exchange rates from the European Central Bank (ECB)"
version = "1.0.0"
edition = "2021"
authors = ["Love Billenius <lovebillenius@disroot.org>"]
license-file = "LICENSE"
keywords = [
    "ECB",
    "Bank",
    "Central",
    "exchange",
    "rates",
]
repository = "https://github.com/lov3b/ecb-rates"
rust-version = "1.83"
categories = ["finance", "command-line-utilities"]

[profile.release]
codegen-units = 1
lto = true

[[bin]]
name = "ecb-rates"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
colored = "3.0.0"
quick-xml = { version = "0.37.2", features = ["async-tokio", "tokio"] }
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["macros"] }
