[package]
name = "ecb-rates"
description = "Query exchange rates from the European Central Bank (ECB)"
version = "1.0.1"
edition = "2024"
authors = ["Love Billenius <lovebillenius@disroot.org>"]
license = "Zlib"
keywords = [
    "ECB",
    "Bank",
    "Central",
    "exchange",
    "rates",
]
repository = "https://github.com/lov3b/ecb-rates"
rust-version = "1.92"
categories = ["finance", "command-line-utilities"]

[profile.release]
codegen-units = 1
lto = true

[[bin]]
name = "ecb-rates"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
quick-xml = { version = "0.38", features = ["async-tokio", "tokio"] }
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol_str = { version = "0.3", features = ["serde"] }
tokio = "1.48"
